Rotation does not work at certain zoom level #33643

Closed
opened 2012-12-21 01:07:37 +01:00 by Nicolas Ong · 5 comments

%%%Let's say I want to precisely rotate a spot lamp. Having the lamp origin offscreen, I cannot rotate it anymore. Not sure if it is a bug, or maybe because the mouse is so far from the object origin it considered the transform factor as 0.

I have this bug since official Blender 2.65, still in 2.65a, running under Archlinux 64. In 2.64, it looked like the origin was at the opposite in universe (or relative to screen, maybe), and the rotation was reversed.

%%%

%%%Let's say I want to precisely rotate a spot lamp. Having the lamp origin offscreen, I cannot rotate it anymore. Not sure if it is a bug, or maybe because the mouse is so far from the object origin it considered the transform factor as 0. I have this bug since official Blender 2.65, still in 2.65a, running under Archlinux 64. In 2.64, it looked like the origin was at the opposite in universe (or relative to screen, maybe), and the rotation was reversed. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%This may have been casued by a commit I did. checking.%%%

%%%This may have been casued by a commit I did. checking.%%%

%%%fixed r53227. pity we didnt catch this one for 2.65a release.
Now it works better then in 2.64, since the position was flipped.%%%

%%%fixed r53227. pity we didnt catch this one for 2.65a release. Now it works better then in 2.64, since the position was flipped.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Maybe in a 2.65b :) I'm not sure this is annoying enough, I just wanted to report it. Thanks !%%%

%%%Maybe in a 2.65b :) I'm not sure this is annoying enough, I just wanted to report it. Thanks !%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33643
No description provided.